Closed Bug 589297 Opened 14 years ago Closed 14 years ago

[@ nsWindow::GetViewWidget] crashes when can't find view

Categories

(Core Graveyard :: Widget: Qt, defect)

x86
Linux
defect
Not set
critical

Tracking

(Not tracked)

RESOLVED FIXED

People

(Reporter: tatiana, Assigned: tatiana)

Details

(Keywords: crash)

Crash Data

Attachments

(2 files)

Attached file backtrace
this crash was originally reproduced with testqmozembed app from incubator embedding:
STEPS:
run ./testqmozembed "http://www.youtube.com/watch?v=gWAnw1kD5UU"

wait until status string updated, but page not updated yet

press exit button

EXPECTED OUTCOME: app closed without crash
ACTUAL OUTCOME: app crashed
Attached patch patchSplinter Review
Assignee: nobody → tanya.meshkova
Status: NEW → ASSIGNED
Attachment #467904 - Flags: review?(romaxa)
Attachment #467892 - Attachment mime type: application/octet-stream → text/plain
Comment on attachment 467904 [details] [diff] [review]
patch

I guess assertion does not make sense anymore, because we never reach it...

I think we should remove it.
Attachment #467904 - Flags: review?(romaxa) → review+
Comment on attachment 467904 [details] [diff] [review]
patch

Oh, assertion still ok her, in case if we have more than 1 view.
NPODB
Attachment #467904 - Flags: approval2.0?
Severity: normal → critical
Keywords: crash
Summary: nsWindow::GetViewWidget crashes when can't find view → [@ nsWindow::GetViewWidget] crashes when can't find view
http://hg.mozilla.org/mozilla-central/rev/29ac0213b54c
Status: ASSIGNED → RESOLVED
Closed: 14 years ago
Resolution: --- → FIXED
Attachment #467904 - Flags: approval2.0?
Crash Signature: [@ nsWindow::GetViewWidget]
Product: Core → Core Graveyard
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: