Bug 589297 - nsWindow::GetViewWidget crashes when can't find view. r=romaxa a=npodb